  * The hamiltonian h_psi no longer needs "npw" and "igk" to be initialized
    via module "wvfct", but it needs "current_k" to be set to the index of
    the current k-point
  * k-point dependent variables npw, igk, and (in LR codes) npwq, igkq, 
    become local and point to global variables "ngk" and "igk_k", via the
    k-point index "ik" or, in LR codes, via "ikks" and "ikkq" indices.
    The global variable are computed once, stored in memory, no I/O is done.
  * "nbnd_occ" variable is now dynamically allocated
  * Duplicated and confusing "outdir" variable removed from "io_files"

                               * * * * *

New in 5.4 version:

  * Calculation of the Magnetic anisotropy energy is implemented (in the limit 
    of small spin-orbit coupling) using the Force theorem (A. Smogunov)
  * Support for FFT with ARM Performance Library (-D__ARM_LIB) added (F. Spiga)
  * Non-blocking FFT communications (-D__NON_BLOCKING_SCATTER) (C. Cavazzoni)
  * Bethe-Salpeter equation added to GWL (P. Umari)
  * Support for QM-MM using MPI (C. Cavazzoni and M. Ippolito)
  * Phonons with vdw-DF (S. de Gironcoli and R. Sabatini) and with DFT-D2
    (P. Giannozzi and F. Masullo) 
  * Addition of EPW to compute electron-phonon properties using Wannier 
    interpolations (S. Poncé, E. R. Margine, C. Verdi, and F. Giustino).

Fixed in 5.4 version:

  * New configure wasn't working properly for some Macintosh due to a
    missing line (commit 11976) and on BG (commit 12333)
  * Possible conflict between FFTW in MKL and in Modules/fftw.c solved 
    (commit 11980)
  * Incorrect printout from bands.x for nspin=2 (commit 12064)
  * parallel make broken by missing dependency (commit 12076)
  * generate_vdW_kernel was crashing in parallel on more than 210 processors
    (210 = default number of different q_i and q_j pairs) (commit 12077)
  * Incorrect normalization in epsilon.f90 for nspin=2, some inaccuracy