@@ -1,6 +1,6 @@
 # Makefile for LR_Modules
 
-include ../make.sys
+include ../make.inc
 
 # location of needed modules and included files (if any)
 MODFLAGS=$(MOD_FLAG)../FFTXlib $(MOD_FLAG)../Modules $(MOD_FLAG)../PW/src $(MOD_FLAG).
