@@ -1,6 +1,6 @@
 # Makefile for tools
 
-include ../../make.sys
+include ../../make.inc
 
 # location of needed modules
 MODFLAGS= $(MOD_FLAG)../../iotk/src $(MOD_FLAG)../../Modules \
