@@ -25,7 +25,7 @@ echo "WHERE_LINKS are: $WHERE_LINKS"
 
 function to_do_before_patch () {
   echo > /dev/null
-  cp $destination/make.sys $destination/make.sys.pre$ADDSON_NAME
+  cp $destination/make.inc $destination/make.inc.pre$ADDSON_NAME
   cp $destination/$WHERE_LINKS/Makefile $destination/$WHERE_LINKS/Makefile.pre$ADDSON_NAME
   if test -e $destination/$WHERE_LINKS/make.depend ; then 
     cp $destination/$WHERE_LINKS/make.depend $destination/$WHERE_LINKS/make.depend.pre$ADDSON_NAME
@@ -59,7 +59,7 @@ function to_do_before_revert () {
 
 function to_do_after_revert () {
   echo > /dev/null
-  mv $destination/make.sys.pre$ADDSON_NAME $destination/make.sys
+  mv $destination/make.inc.pre$ADDSON_NAME $destination/make.inc
   mv $destination/$WHERE_LINKS/Makefile.pre$ADDSON_NAME $destination/$WHERE_LINKS/Makefile
   if test -e $destination/$WHERE_LINKS/make.depend.pre$ADDSON_NAME ; then \
   mv $destination/$WHERE_LINKS/make.depend.pre$ADDSON_NAME $destination/$WHERE_LINKS/make.depend ; fi
